--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "express": "^4.18.1",
     "knex": "^2.1.0",
     "mysql": "^2.18.1",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "tsc && node ./build/index.js",
