--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "knex": "^2.1.0",
+    "moment": "^2.29.4",
     "mysql": "^2.18.1",
     "typescript": "^4.7.4",
     "uuid": "^8.3.2"
