--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "knex": "^2.1.0",
     "moment": "^2.29.4",
     "mysql": "^2.18.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4",
     "uuid": "^8.3.2"
   },
